--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://shyam:Shyam%40mongodb@cluster0.nmbgu.mongodb.net/url?retryWrites=true&w=majority&appName=URL
-APP_URL = http://localhost:3000/
+APP_URL = https://url-backend-qiox.onrender.com/
 JWT_SECRET = "thisisasecretkey"
